# My-IP-Service

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
.github/workflows/: build.yaml
templates/: index.html
